# inventory

./: index.html  package-lock.json  package.json
src/: App.jsx  main.jsx
src-tauri/: 2  Cargo.toml  schema.sql  tauri.conf.json
src-tauri/entity/: bill.rs  bill_item.rs  case_bill.rs  company.rs  mod.rs  product.rs  stock.rs
src-tauri/src/: db.rs  main.rs
src-tauri/src/auth/: commands.rs
src-tauri/src/bill/: commands.rs  models.rs  services.rs
src-tauri/src/case/: commands.rs  models.rs  services.rs
src-tauri/src/company/: commands.rs  models.rs  services.rs
src-tauri/src/notification/: commands.rs  models.rs
src-tauri/src/product/: commands.rs  models.rs  services.rs
src-tauri/src/stock/: commands.rs  models.rs  services.rs
src/components/: AddCompany.jsx  AddProduct.jsx  BillEditModal.jsx  BillStats.jsx  Bills.jsx  Card.css  Case.jsx  CaseEditModal.jsx  Challan.css  ChallanBill.css  CompanyEditModal.jsx  CreateBills.jsx  CreateCase.jsx  CustomModal.css  CustomModal.jsx  Dashboard.jsx  Inventory.jsx  Layout.jsx  Login.css  Login.jsx  NewBill.jsx  NewCase.jsx  Notification.jsx  NotificationCard.jsx  PrintBills.jsx  PrintChallan.jsx  PrivateRoute.jsx  ProductEditModal.jsx  StatusButton.jsx  StockEditModal.jsx  SucessModal.jsx  imageDisplay.jsx  navbarItems.jsx
src/utils/: ActionButton.jsx  ActionButtonBill.jsx  ActionButtonCase.jsx  ActionButtonProduct.jsx  ActionButtonStock.jsx  AsideMenu.jsx  AuthContext.jsx  Cards.jsx  CleanButton.jsx  DropDownBill.jsx  DropDownCase.jsx  Dropdown.jsx  DropdownMenu.jsx  ExtraAmount.jsx  Icons.jsx  LeanCard.jsx  (+7 more)
