[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

tokio = { version = "1.42.0", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
sqlx = { version = "0.8.2", features = ["sqlite", "derive", "runtime-tokio-native-tls"] }
sea-orm-migration = "1.1.2"

sea-orm = { version = "1.1.2", features = [
    "debug-print", 
    "runtime-tokio-native-tls", 
    "sqlx-sqlite"
] }
base64 = "0.22.1"
uuid = { version = "1.3", features = ["v4"] }
tauri-plugin-devtools = "2.0.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0" # For log directory management
tauri-plugin-notification = "2"
